[gd_scene load_steps=16 format=2]

[ext_resource path="res://games/flappybird/images/ground.png" type="Texture2D" id=1]
[ext_resource path="res://games/flappybird/player.gd" type="Script" id=2]
[ext_resource path="res://games/flappybird/images/background.png" type="Texture2D" id=3]
[ext_resource path="res://games/flappybird/sounds/sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://games/flappybird/images/bird.png" type="Texture2D" id=5]
[ext_resource path="res://games/flappybird/images/clouds.png" type="Texture2D" id=6]
[ext_resource path="res://games/flappybird/sounds/sfx/pass_wall.wav" type="AudioStream" id=7]
[ext_resource path="res://games/flappybird/sounds/sfx/game_end.wav" type="AudioStream" id=8]
[ext_resource path="res://games/flappybird/camera.gd" type="Script" id=9]
[ext_resource path="res://shared/fonts/press_start2p/press_start2p_regular.ttf" type="FontFile" id=10]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 9.5, 9.5 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 10, 112 )

[sub_resource type="FontFile" id=4]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="FontFile" id=5]
size = 8
font_data = ExtResource( 10 )

[node name="World" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2( 8, -13 )
scale = Vector2( 3.28, 1.47 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 200, 200 )

[node name="Clouds" type="Sprite2D" parent="."]
position = Vector2( 27, -60 )
scale = Vector2( 1.1475, 1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 623, 70 )

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2( 12.25, 91.3513 )
scale = Vector2( 0.9625, 1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 723, 79 )

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="PlayerNode"]
position = Vector2( -151, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="PlayerNode/Player"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Hitbox" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Hitbox"]
shape = SubResource( 2 )

[node name="Reset" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Reset"]
position = Vector2( -137, 0 )
shape = SubResource( 3 )

[node name="Sound_Jump" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
position = Vector2( 151, 0 )
stream = ExtResource( 4 )

[node name="Sound_Wall" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
position = Vector2( 151, 0 )
stream = ExtResource( 7 )

[node name="Sound_GameEnd" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
position = Vector2( 151, 0 )
stream = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = -192.0
offset_top = -112.0
offset_right = -130.0
offset_bottom = -94.0
theme_override_fonts/font = SubResource( 4 )
text = "0"

[node name="StartLabel" type="Label" parent="CanvasLayer"]
offset_left = -181.0
offset_top = 40.0
offset_right = 187.0
offset_bottom = 63.0
theme_override_fonts/font = SubResource( 5 )
text = "press <space> to flap"
align = 1

[connection signal="area_entered" from="PlayerNode/Player/Hitbox" to="PlayerNode/Player" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Hitbox" to="PlayerNode/Player" method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Reset" to="PlayerNode/Player" method="_on_Reset_body_entered"]
